# DistributedComputationalGraph

./: .gitmodules  CMakeLists.txt  Dockerfile  VarianceGraph.json  docker-compose.yml
src/: Client.cpp  Client.h  Graph.h  Manager.cpp  Manager.h  Node.h  Operations.cpp  Operations.h  OperationsManager.cpp  OperationsManager.h  TensorCodecs.cpp  TensorCodecs.h  Worker.cpp  Worker.h  client.cpp  common.cpp  common.h  manager.cpp  worker.cpp
